Wed Nov 14 23:11:59 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/Naming_Context.cpp (info): Fixed Unicode build problems
	  by consistently using ACE_TCHAR instead of char, and by
	  using Unicode aware string functions in ACE_OS_String
	  instead of ACE_OS.

	* ace/Svc_Conf_l.cpp: Default intialized ace_yy_c_buf_p to ACE_TCHAR
	  instead of char.  Default initialized ace_yy_cp, ace_yy_bp to 0.

	* ace/Svc_Conf_y.cpp: Wrap string literals passed to ace_yyerror
	  with ACE_LIB_TEXT().

Wed Nov 14 06:38:41 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* docs/ACE-bug-process.html (HREF): Changed references from ace.cs
	  to  deuce.doc. Thanks to Johnny Willemsen for reporting this. 

Tue Nov 13 15:04:15 2001  Carlos O'Ryan  <coryan@uci.edu>

	* html/Stats/index.shtml:
	* html/Stats/detailed_performance.shtml:
	  Improved documentation about the test location, ORB and network
	  configuration used.  Thanks to David Yongqiang Wang
	  <davidyw@avaya.com> for pointing out the problems.

Tue Nov 13 11:46:11 2001  Chris Cleeland  <cleeland_c@ociweb.com>

	* tests/Collection_Test.cpp (iterate_const): Fixed ACE_DEBUG print
	statements that were accessing the element of the unbounded set as
	an int rather than an UglyThing.  Thanks to Ossama for pointing
	this out.

Mon Nov 12 11:41:35 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.cpp (send, recv):

	  In the va_arg versions of these methods, do not use
	  send/recv_n() to as the underlying send/recv() method.  It
	  forces unnecessary blocking.

	  Corrected return value semantics in versions of these methods
	  that use loop to send/receive multiple buffers.  If data was
	  sent or received than do not return -1 on error.  Instead return
	  the amount of bytes sent/received.  This is necessary to allow
	  the caller to keep track of sent or received data.  [Bug 882]

Sun Nov 11 23:50:00 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/Date_Time_Test.cpp: Remove argv variable from